  up in the child process to prevent deadlock and report proper thread counts
  if the new process uses the threading module.

- Issue #3309: Fix bz2.BZFile iterator to release its internal lock
  properly when raising an exception due to the bz2file being closed.
  Prevents a deadlock.


Extension Modules
-----------------

- Issue 3886: [CVE-2008-2316] Possible integer overflow in the _hashopenssl
  module was closed.

- Issue 1179: [CVE-2007-4965] Integer overflow in imageop module.
  Also fixes rgbimg module.

- Issue #3205: When iterating over a BZ2File fails allocating memory, raise
  a MemoryError rather than silently stop the iteration.

- Patch #2111: Avoid mmap segfault when modifying a PROT_READ block.

- zlib.decompressobj().flush(value) no longer crashes the interpreter when
  passed a value less than or equal to zero.

- issue2858: Fix potential memory corruption when bsddb.db.DBEnv.lock_get
  and other bsddb.db object constructors raised an exception.

- Issue #3120: On 64-bit Windows the subprocess module was truncating handles.

- Issue #1471: Arguments to fcntl.ioctl are no longer broken on 64-bit OpenBSD
  and similar platforms due to sign extension.

Tests
-----

- Issue #3261: test_cookielib had an improper file encoding specified.

- Patch #2232: os.tmpfile might fail on Windows if the user has no
  permission to create files in the root directory.


Documentation
-------------

Build
-----

Windows
-------


What's New in Python 2.5.2?
===========================

*Release date: 21-Feb-2008*

Extension Modules
-----------------

- Fix deallocation of array objects when allocation ran out of memory.
  Remove array test case that was incorrect on 64-bit systems.

- Bug #2137: Remove test_struct.test_crasher, which was meaningful
  only on 32-bit systems.


What's New in Python 2.5.2c1?
=============================

*Release date: 14-Feb-2008*

Core and builtins
-----------------
